--- a/index.html
+++ b/index.html
@@ -195,8 +195,11 @@
 			            <h2>Alpha Geek</h2>
 						<!-- <h2 class="d-flex" style="margin-bottom: 0">With over 5 years of experience</h2> -->
 						<!-- <br> -->
-			            <p><a href="https://www.youtube.com/@alphageek_" class="btn btn-primary py-3 px-4">YouTube</a> 
-							<a href="https://github.com/abisecops" class="btn btn-white btn-outline-white py-3 px-4">My works</a></p>
+			           <p>
+   				 <a href="https://www.youtube.com/@alphageek_" class="btn btn-primary py-3 px-4" target="_blank">YouTube</a> 
+   				 <a href="https://github.com/abisecops" class="btn btn-white btn-outline-white py-3 px-4" target="_blank">My works</a>
+				</p>
+
 		            </div>
 		          </div>
 	        	</div>
