--- a/index.html
+++ b/index.html
@@ -358,12 +358,11 @@
     					<span class="position">Jetking</span>
     					<p class="mt-4">Grade: A</p>
     				</div>
-				</div>
     		</div>
 
     		<div class="row justify-content-center mt-5">
     			<div class="col-md-6 text-center ftco-animate">
-    				<p><a href="https://shorturl.at/SmQm6" class="btn btn-primary py-4 px-5">Download CV</a></p>
+    				<p><a href="https://shorturl.at/SmQm6" class="btn btn-primary py-4 px-5" target="_blank">Download CV</a></p>
     			</div>
     		</div>
     	</div>
