--- a/index.html
+++ b/index.html
@@ -386,7 +386,7 @@
               </a>
               <div class="text mt-3 float-right d-block">
 
-                <h3 class="heading"><a href="https://github.com/abisecops/BotoDash">BotoDash</a></h3>
+                <h3 class="heading"><a href="https://github.com/abisecops/BotoDash"target="_blank">BotoDash</a></h3>
                 <p>Dashboard for AWS with Flask and Boto3—monitor like a pro!</p>
               </div>
             </div>
@@ -397,7 +397,7 @@
               </a>
               <div class="text mt-3 float-right d-block">
 
-                <h3 class="heading"><a href="https://github.com/abisecops/hitop">hitop</a></h3>
+                <h3 class="heading"><a href="https://github.com/abisecops/hitop"target="_blank">hitop</a></h3>
                 <p>Bring htop to the web with Flask! </p>
               </div>
             </div>
@@ -408,7 +408,7 @@
               </a>
               <div class="text mt-3 float-right d-block">
 
-                <h3 class="heading"><a href="https://github.com/abisecops/infosec-poems">Infosec Poems</a></h3>
+                <h3 class="heading"><a href="https://github.com/abisecops/infosec-poems"target="_blank">Infosec Poems</a></h3>
                 <p>Explore infosec through poetry! From encryption to detection, discover the art behind the tech. 🌐✨</p>
               </div>
             </div>
@@ -423,7 +423,7 @@
 				</a>
 				<div class="text mt-3 float-right d-block">
   
-				  <h3 class="heading"><a href="https://github.com/abisec/probe">Probe</a></h3>
+				  <h3 class="heading"><a href="https://github.com/abisec/probe"target="_blank">Probe</a></h3>
 				  <p>Simplify reconnaissance with our web scanner tool Probe 🔍
 				</p>
 				</div>
@@ -431,11 +431,10 @@
 			</div>
 			<div class="col-md-4 d-flex ftco-animate">
 				<div class="blog-entry justify-content-end">
-				<a href="https://github.com/abisecops/Docker-Series" class="block-20 zoom-effect" style="background-image: url('images/docker.svg');">
+			<a href="https://github.com/abisecops/Docker-Series" class="block-20 zoom-effect" style="background-image: url('images/docker.svg');" target="_blank">
 				</a>
 				<div class="text mt-3 float-right d-block">
-  
-				  <h3 class="heading"><a href="https://github.com/abisecops/Docker-Series">Docker Series</a></h3>
+			<h3 class="heading"><a href="https://github.com/abisecops/Docker-Series" target="_blank">Docker Series</a></h3>
 				  <p>Dockerfiles for easy app containerization.</p>
 				</div>
 			  </div>
