--- a/index.html
+++ b/index.html
@@ -267,7 +267,7 @@
 									<span class="number" data-number="30">0</span> <span>+</span>
 									<span>&nbsp; Projects completed</span>
 								</p>
-								<p><a href="https://www.linkedin.com/in/abisec" class="btn btn-primary py-3 px-3">LinkedIn</a></p>
+								<p><a href="https://www.linkedin.com/in/abisec" target="_blank" class="btn btn-primary py-3 px-3">LinkedIn</a></p>
 							</div>
 						</div>
 					</div>
@@ -362,7 +362,7 @@
 
     		<div class="row justify-content-center mt-5">
     			<div class="col-md-6 text-center ftco-animate">
-    				<p><a href="https://shorturl.at/SmQm6" class="btn btn-primary py-4 px-5" target="_blank">Download CV</a></p>
+    				<p><a href="https://shorturl.at/SmQm6" target="_blank" class="btn btn-primary py-4 px-5" target="_blank">Download CV</a></p>
     			</div>
     		</div>
     	</div>
@@ -382,7 +382,7 @@
         <div class="row d-flex">
           <div class="col-md-4 d-flex ftco-animate">
           	<div class="blog-entry justify-content-end")">
-		<a href="https://github.com/abisecops/BotoDash" class="block-20 zoom-effect" style="background-image: url('images/botodash.png');">
+		<a href="https://github.com/abisecops/BotoDash" target="_blank" class="block-20 zoom-effect" style="background-image: url('images/botodash.png');">
               </a>
               <div class="text mt-3 float-right d-block">
 
@@ -393,7 +393,7 @@
           </div>
           <div class="col-md-4 d-flex ftco-animate">
           	<div class="blog-entry justify-content-end">
-              <a href="https://github.com/abisecops/hitop" class="block-20 zoom-effect" style="background-image: url('images/hitop.png');">
+              <a href="https://github.com/abisecops/hitop" target="_blank" class="block-20 zoom-effect" style="background-image: url('images/hitop.png');">
               </a>
               <div class="text mt-3 float-right d-block">
 
@@ -404,7 +404,7 @@
           </div>
           <div class="col-md-4 d-flex ftco-animate">
           	<div class="blog-entry">
-              <a href="https://github.com/abisecops/infosec-poems" class="block-20 zoom-effect" style="background-image: url('images/infosecpoems.png');">
+              <a href="https://github.com/abisecops/infosec-poems" target="_blank" class="block-20 zoom-effect" style="background-image: url('images/infosecpoems.png');">
               </a>
               <div class="text mt-3 float-right d-block">
 
@@ -419,7 +419,7 @@
 		<div class="row d-flex justify-content-center">  
 			<div class="col-md-4 d-flex ftco-animate">
 				<div class="blog-entry justify-content-end">
-				<a href="https://github.com/abisec/probe" class="block-20 zoom-effect" style="background-image: url('images/proj_4.jpg');">
+				<a href="https://github.com/abisec/probe" target="_blank" class="block-20 zoom-effect" style="background-image: url('images/proj_4.jpg');">
 				</a>
 				<div class="text mt-3 float-right d-block">
   
@@ -431,7 +431,7 @@
 			</div>
 			<div class="col-md-4 d-flex ftco-animate">
 				<div class="blog-entry justify-content-end">
-			<a href="https://github.com/abisecops/Docker-Series" class="block-20 zoom-effect" style="background-image: url('images/docker.svg');" target="_blank">
+			<a href="https://github.com/abisecops/Docker-Series" target="_blank" class="block-20 zoom-effect" style="background-image: url('images/docker.svg');" target="_blank">
 				</a>
 				<div class="text mt-3 float-right d-block">
 			<h3 class="heading"><a href="https://github.com/abisecops/Docker-Series" target="_blank">Docker Series</a></h3>
@@ -457,7 +457,7 @@
 						<h2>More projects on<span> Github  </span> </h2>
 						<div class="heading"> <h4>  I aim to contribute effectively to organizational success through innovative and proactive security practices.💻🛡️ </h4>
 						<br>
-						<p><a href="https://github.com/abisecops" class="btn btn-primary py-3 px-5">GitHub</a></p>
+						<p><a href="https://github.com/abisecops" target="_blank" rel="noopener noreferrer" class="btn btn-primary py-3 px-5">GitHub</a></p>
 						</div>
 					</div>
 				</div>
@@ -524,17 +524,17 @@
 			<br>
 			<div class="row justify-content-center">
 				<div class="col-md-7 ftco-animate text-center">
-					<h2>Have a<span> Question?  </span> <a href="https://t.me/abis3c" class="btn btn-primary py-3 px-5" target="_blank">Click Here</a> </h2>
+					<h2>Have a<span> Question?  </span> <a href="https://t.me/abis3c" target="_blank" class="btn btn-primary py-3 px-5" target="_blank">Click Here</a> </h2>
 				</div>
 			</div>
 				<br>
 					<ul class="ftco-footer-social list-unstyled d-flex justify-content-center align-items-center mb-0">
-					  <li class="ftco-animate normal-txt">Find me on  </li>
-					  <li class="ftco-animate"><a href="https://www.youtube.com/@alphageek_"><span class="icon-youtube"></span></a></li>
-					  <li class="ftco-animate"><a href="https://www.linkedin.com/in/abisec"><span class="icon-linkedin"></span></a></li>  
-					  <li class="ftco-animate"><a href="https://x.com/a_anoint"><span class="icon-twitter"></span></a></li>
-					  <li class="ftco-animate"><a href="https://abisec.medium.com"><span class="icon-medium"></span></a></li>
-				      <li class="ftco-animate"><a href="https://t.me/abisec"><span class="icon-telegram"></span></a></li>
+  					  <li class="ftco-animate normal-txt">Find me on:</li>
+    					  <li class="ftco-animate"><a href="https://www.youtube.com/@alphageek_" target="_blank" rel="noopener noreferrer"><span class="icon-youtube"></span></a></li>
+   					 <li class="ftco-animate"><a href="https://www.linkedin.com/in/abisec" target="_blank" rel="noopener noreferrer"><span class="icon-linkedin"></span></a></li>
+    					<li class="ftco-animate"><a href="https://x.com/a_anoint" target="_blank" rel="noopener noreferrer"><span class="icon-twitter"></span></a></li>
+    					<li class="ftco-animate"><a href="https://abisec.medium.com" target="_blank" rel="noopener noreferrer"><span class="icon-medium"></span></a></li>
+    					<li class="ftco-animate"><a href="https://t.me/abis3c" target="_blank" rel="noopener noreferrer"><span class="icon-telegram"></span></a></li>
 					</ul>
 				<br>
 		   </div>
